public/css/styles3.css
body {
  font-family: 'Nunito';
  /*background-image: url("https://imagizer.imageshack.com/img921/8729/Ia1vVY.jpg");*/
  background-color: #e2e2e2;
  background-size: cover;
}

body::after {
  content: "";
  background-color: white;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0.25;
  z-index: -1;
}

.box {
  position: relative;
}


a:hover {
  text-decoration: none;
}

.fa-list {
  margin-right: 5px;
}

.spacing {
  margin-bottom: 3%;
}

/*======NAV BAR MAIL ENVELOPE=======*/

i.icon.envelope.outline:before {
    content: "\f0e0";
    margin-left: 2px;
}

/*======NAV BAR MESSAGES RIGHT-SIDE BORDER======*/
.ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
    border-right: 1px solid #F7F7F7;
}

/*nav {
  text-align: right;
  display: flex;
  justify-content: flex-end;
  margin-bottom: 15px;
  margin-top: 5px;
  border-bottom: 2px solid #fff;
}

.nav-buttons {
  border: 1px solid transparent;
  background: #fff;
  padding: 1px;
  border-radius: 7px;
}

#button-1 {
background: transparent;
border: none;
}

#button-2 {
background: transparent;
border: none;
}

#button-3 {
background: transparent;
border: none;
}


nav li {
  display: inline;
  margin: 0 10px;
}


nav a:not(#message-link) {
  text-decoration: none;
  box-sizing: border-box;
  font-size: 0.9rem;
  color: #000;
  padding: 6px;
}

a#message-link {
  color: #000;
}

.msgCount {
  font-size: 0.80em;
}

nav a:hover {
  color: #333;
  transition: 0.25s;
  box-sizing: border-box;
}*/

.fa-envelope {
  font-size: 0.8rem;
}

.main-box {
  background: red;
  height: max-content;
  width: 100%
}

.col-main {
  color: #fff;
  padding: 15px;
  margin: 5px;
  border-right: 3px solid #fff;
}

.col-main:last-of-type {
  border: none;
}

.col-content {
  padding: 20px;
  /*margin: 5px;*/
}


.col-content:hover {
  border-color: #000;
  background-color: #e8eef2;
}

.row {
  clear:both;
  border-bottom: 1px solid rgba(52, 52, 52, 0.3);
  border-left: 1px solid rgba(52, 52, 52, 0.3);
  border-right: 1px solid rgba(52, 52, 52, 0.3);
  background-color: rgba(250, 250, 250, 1.0);
}

.row:last-of-type {
  border-bottom-right-radius: 7px;
  border-bottom-left-radius: 7px;
  box-shadow: 0px 10px 5px -12px rgba(0,0,0,0.75);
}

#row-main {
  background-color: #245eb5;
  border-top-right-radius: 7px;
  border-top-left-radius: 7px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

details summary::-webkit-details-marker {
  display:none;
}
/*This hides arrows in Firefox*/
details > summary {
  display:block
}

.welcomeText {
  font-size: 1.2rem;
  font-family: 'Prata', serif;
  color: #333;
}

.welcome-space {
  margin-bottom: 4%;
  text-align: center;

}

.balanceText {
  font-size: 1.0rem;
  font-family: 'Nunito';
  color: #333;
  padding: 8px;
  background: #fff;
  border-radius: 7px;
  display: block;
  width: 15%;
  margin: 0 auto;
}

.delete-button {
  margin: 10px 0;
  border: 1px solid #ff6e2b;
  border-radius: 4px;
  padding: 7px;
  background: rgba(255, 110, 43, 0.7);
  color: #fff;
}

.form-box {
  background: rgba(250, 250, 250, 0.8);
  margin: 10px 0;
  padding: 10px;
}

.form-box button {
  border: 2px solid transparent;
  padding: 5px;
  background: #D3D3D3;
}

#memo, #amount {
  background: transparent;
  border: 2px solid #686868;
}

.delete-box {
  position: relative;
  left: 50%;
  margin-bottom: 10px;
}

#delete-account {
  border: 2px solid #FF4E4E;
  border-radius: 4px;
  padding: 8px;
  background: rgba(255, 78, 78, 0.8);
}

.admin-box {
  background: rgba(255, 255, 255, 0.5);
  display: inline-block;
  text-align: center;
  position: relative;
  padding: 15px;
  left: 50%;
}

.admin-box button {
  border: 1px solid #fff;
  padding: 5px;
  border-radius: 5px;
  background: #333;
  color: #fff;
}

.accounts-dropdown {
  margin-bottom: 10px;
}

fieldset {
    border: 1px solid #fff !important;
    border-radius: 4px;
    background: rgba(255, 255, 255, .2);
    padding: 0 1.4em 1.4em 1.4em !important;
    margin: 20px 0 1.5em 0 !important;
    -webkit-box-shadow:  0px 0px 0px 0px #000;
    box-shadow:  0px 0px 0px 0px #000;
}

legend {
    background: rgba(255, 255, 255, .5);
  font-size: 1.2em !important;
    font-weight: bold !important;
    text-align: left !important;
    width:auto;
    padding:0 10px;
    border: 1px solid #fff;
    color: #000;
}
/***********************ACCOUNT PAGE***************************************************************/





/*************************PROFILE SECTION**********************************/

.profile-box {
  border: 1px solid #fff;
  border-radius: 5px;
  margin: 10% auto 0 auto;
  width: 35%;
  padding: 1%;
  background: rgba(255, 255, 255, 0.8);
  font-family: 'Nunito';
}

.account-key {
  font-weight: bold;
  margin-right: 3px;
}

/**************************CHANGE PASSWORD SECTION ********************************/


.password-box {
  border: 1px solid #fff;
  border-radius: 5px;
  margin: 10% auto 0 auto;
  width: 40%;
  padding: 1%;
  background: rgba(255, 255, 255, 0.8);
  font-family: 'Nunito';
  justify-content: center;
}

.password-box button {
  border: 2px solid #34d374;
  border-radius: 2px;
  background: transparent;
  display: block;
  margin: 10px auto 0 auto;
}

.password-box button:hover {
  background: #34d374;
  color: #fff;
}

.password-feedback {
  border: 1px solid #fff;
  background: #fff;
  border-radius: 5px;
  font-weight: bold;
  text-align: center;
  margin-top: 5px;
  animation: shake 0.25s;
  position: relative;
  animation-iteration-count: 3;
}

@keyframes shake {
  0% { left: 0; }
  33% { left: -5px; }
  66% { left: 0; }
  100% { left: 5px; }
 
}

label {
  padding-bottom: 7px;
}

input.change-password-input {
  border: 1px solid #000;
  border-radius: 5px;
  background: #fff;
  font-size: 1.2rem;
  width: 250px;
  margin-bottom: 15px;
}

.form-password {
  justify-content: center;
  text-align: center;
}
/* ... */

